# LightCull

./: .gitignore  CMakeLists.txt  CMakePresets.json  LightCull.sublime-project  README.md
Scripts/: GenerateTraversalLUT.py  cmake-vs2015-vk.cmd  cmake-vs2017-vk.cmd
Source/: BaseApplication.h  CMakeLists.txt  ClusteredLightBuilder.cpp  ClusteredLightBuilder.h  DiscreteDistribution.h  EmbeddedAssets.cpp  EmbeddedAssets.h  Fiber.cpp  Fiber.h  GpuBuffer.h  ImGuiImpl.cpp  ImGuiImpl.h  LightCullApp.cpp  LightCullApp.h  LightCullMain.cpp  LightingCommon.cpp  LightingCommon.h  Model.cpp  Model.h  Scripting.cpp  Scripting.h  Shader.cpp  Shader.h  TiledLightTreeBuilder.cpp  TiledLightTreeBuilder.h  Utils.cpp  Utils.h
Source/Shaders/: ClusteredShading.comp  Common.glsl  FullScreenTriangle.vert  GbufferTranscode.frag  LightingCommon.glsl  LightingTypes.glsl  Model.frag  Model.vert  ShaderDefines.h  TileStatsDisplay.comp  TileStatsGenerate.comp  TileStatsReduce.comp  TiledLightTreeShading.comp  TiledLightTreeShadingCommon.glsl  TiledLightTreeShadingHybrid.comp  TiledLightTreeShadingMasked.comp  TiledLightTreeTypes.glsl
